fixing the spacing on news items
adding maintenance message to brand guidelines
mods to the home article
separate twitter module

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -305,7 +305,7 @@ ul.joomla-nav-news{
 }
 
 .phome-promotions-news-link {
-    margin-bottom: -18px; /*as the elipses is still there I have to use a negative margin LS*/
+    margin-bottom: -26px; /*as the elipses is still there I have to use a negative margin LS*/
 }
 
 .joomla-nav-news li a {
